# Z-converter

./: LICENSE.txt  README.md  index.html  installer.nsi  main.js  package-lock.json  package.json  preload.js  style.css  test.txt
electron_app/: converterImages.js  dll-handler.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  style.css
winAPI_app/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  DllMain.cpp  ShellExt.cpp  ShellExt.h  installer.nsi  license.txt  main.cpp  resource.h
